# raizes_do_nordeste

./: .env.example  .gitignore  README.md  Raizes_do_nordeste.postman_collection.json  docker-compose.yml  dockerfile  gerar_token.py  main.py  pyproject.toml
api/: Dockerfile  main.py  pyproject.toml
api/authentication/: config.py  security.py
api/controllers/: autenticacao_controller.py  estoque_controller.py  pedido_controller.py  produto_controller.py  unidade_controller.py  usuario_controller.py
api/database/: conexao.py
api/database/models/: __init__.py  estoque.py  pagamento.py  pedido.py  produto.py  unidade.py  usuario.py
api/services/: estoque_service.py  pagamento_service.py  pedido_service.py  produto_service.py  token_service.py  unidade_service.py  usuario_service.py
api/utils/: logger.py
authentication/: security.py
controllers/: autenticacao.py  autenticacao_controller.py  estoque_controller.py  pedido_controller.py  produto_controller.py  unidade_controller.py  usuario_controller.py
database/: __init__.py  conexao.py  pedido.py  unidade.py  usuario.py
database/models/: __init__.py  estoque.py  pagamento.py  pedido.py  (+3 more)
docs/: EVIDENCIAS_LOG.md  PLANO_TESTES.md  lgpd.md
enums/: pedido_enum.py
model/: Users.py  schema.py
schemas/: estoque_schema.py  pagamento_schema.py  pedido_schema.py  produto_schema.py  token_schema.py  unidade_schema.py  usuario.py  usuario_schema.py
services/: estoque_service.py  pedido_service.py  produto_service.py  service_usuario.py  token_service.py  unidade_service.py  usuario.py  usuario_service.py
(+14 files in other folders)
