[project]
name = "raizes-do-nordeste"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2.0.48",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "pydantic[email]",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.12.1",
    "python-multipart>=0.0.26",
    "dotenv>=0.9.9",
    "python-jose>=3.5.0",
    "requests>=2.33.1",
]
